GTSstudy/1-GTS_Rao/RESU/20230328-1237/compile.log
/share/storage/finzeo/Simulaciones/GTSstudy/1-GTS_Rao/RESU/20230328-1237/src/cs_meg_initialization.c: En la función ‘cs_meg_initialization’:
/share/storage/finzeo/Simulaciones/GTSstudy/1-GTS_Rao/RESU/20230328-1237/src/cs_meg_initialization.c:48:17: aviso: variable ‘c_id’ sin usar [-Wunused-variable]
       cs_lnum_t c_id = zone->elt_ids[e_id];
                 ^
/share/storage/finzeo/Simulaciones/GTSstudy/1-GTS_Rao/RESU/20230328-1237/src/cs_user_extra_operations.cpp:78:29: error fatal: cs_stokes_model.h: No existe el fichero o el directorio
 #include "cs_stokes_model.h"
                             ^
compilación terminada.
mpicc -DHAVE_CONFIG_H -I/share/storage/pub/finzeo/saturne-vof/include -I/share/storage/pub/finzeo/saturne-vof/include/code_saturne -I/share/apps/salome/8.5.0/BINARIES-CO6/cgns/include -I/share/apps/salome/8.5.0/BINARIES-CO6/med/include -I/share/apps/salome/8.5.0/BINARIES-CO6/hdf5/include -I/usr/include/mpich-x86_64 -DMPICH_SKIP_MPICXX -D_POSIX_C_SOURCE=200809L -DDEBUG -funsigned-char -W -Wall -Wshadow -Wpointer-arith -Wcast-qual -Wcast-align -Wwrite-strings -Wstrict-prototypes -Wmissing-prototypes -Wmissing-declarations -Wnested-externs -Wunused -Wfloat-equal -Werror=implicit-function-declaration -std=c11 -fdiagnostics-color=auto -Werror=format-security -O2 -funroll-loops -fopenmp -g -c /share/storage/finzeo/Simulaciones/GTSstudy/1-GTS_Rao/RESU/20230328-1237/src/cs_meg_initialization.c
mpicxx -I /share/storage/finzeo/Simulaciones/GTSstudy/1-GTS_Rao/RESU/20230328-1237/src -DHAVE_CONFIG_H -I/share/storage/pub/finzeo/saturne-vof/include -I/share/storage/pub/finzeo/saturne-vof/include/code_saturne -I/share/apps/salome/8.5.0/BINARIES-CO6/cgns/include -I/share/apps/salome/8.5.0/BINARIES-CO6/med/include -I/share/apps/salome/8.5.0/BINARIES-CO6/hdf5/include -I/usr/include/mpich-x86_64 -DMPICH_SKIP_MPICXX -D_POSIX_C_SOURCE=200809L -DDEBUG -W -Wall -Wshadow -Wpointer-arith -Wcast-qual -Wcast-align -Wwrite-strings -Wunused -Wfloat-equal -std=c++11 -fdiagnostics-color=auto -O2 -funroll-loops -std=c++11 -fopenmp -g -c /share/storage/finzeo/Simulaciones/GTSstudy/1-GTS_Rao/RESU/20230328-1237/src/cs_user_extra_operations.cpp
